2011-11-22  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: remove Inspector::bringToFront from the protocol.
        https://bugs.webkit.org/show_bug.cgi?id=72937

        Reviewed by Yury Semikhatsky.

        * src/InspectorClientImpl.cpp:
        (WebKit::InspectorClientImpl::bringFrontendToFront):
        * src/InspectorClientImpl.h:
        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::bringFrontendToFront):
        * src/WebDevToolsAgentImpl.h:

2011-11-17  Nat Duca  <nduca@chromium.org>

        [chromium] Route willDraw/setNeedsRedraw to CCInputHandler and fix double-drawing issues that result
        https://bugs.webkit.org/show_bug.cgi?id=72688

        Reviewed by James Robinson.

        * src/WebCompositorImpl.cpp:
        (WebCore::CCInputHandler::create):
        (WebKit::WebCompositorImpl::WebCompositorImpl):
        (WebKit::WebCompositorImpl::handleInputEvent):
        (WebKit::WebCompositorImpl::willDraw):
        * src/WebCompositorImpl.h:
        (WebKit::WebCompositorImpl::create):
        * tests/CCFrameRateControllerTest.cpp:
        (WebKitTests::FakeCCFrameRateControllerClient::beginFrame):
        * tests/CCSchedulerStateMachineTest.cpp:
        (WebCore::TEST):
        * tests/CCSchedulerTest.cpp:
        (WebKitTests::SchedulerClientThatSetNeedsDrawInsideDraw::SchedulerClientThatSetNeedsDrawInsideDraw):
        (WebKitTests::SchedulerClientThatSetNeedsDrawInsideDraw::setScheduler):
        (WebKitTests::SchedulerClientThatSetNeedsDrawInsideDraw::numDraws):
        (WebKitTests::SchedulerClientThatSetNeedsDrawInsideDraw::hasMoreResourceUpdates):
        (WebKitTests::SchedulerClientThatSetNeedsDrawInsideDraw::scheduledActionBeginFrame):
        (WebKitTests::SchedulerClientThatSetNeedsDrawInsideDraw::scheduledActionDrawAndSwap):
        (WebKitTests::SchedulerClientThatSetNeedsDrawInsideDraw::scheduledActionUpdateMoreResources):