@@ -1,5 +1,15 @@
 2011-11-22  Pavel Feldman  <pfeldman@google.com>
 
+        Web Inspector: [chromium] fix internactive ui test for scripts panel.
+        https://bugs.webkit.org/show_bug.cgi?id=72935
+
+        Reviewed by Yury Semikhatsky.
+
+        * src/js/Tests.js:
+        (.TestSuite.prototype.testScriptsTabIsPopulatedOnInspectedPageRefresh.waitUntilScriptIsParsed):
+
+2011-11-22  Pavel Feldman  <pfeldman@google.com>
+
         Web Inspector: remove Inspector::bringToFront from the protocol.
         https://bugs.webkit.org/show_bug.cgi?id=72937
 
